# x-alert-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
bot/: config.py  errors.py  formatter.py  handlers.py  main.py  scheduler.py  storage.py  twitter.py
devscripts/: test_twitter.py
specs/: poll_loop.md
tests/: conftest.py  test_errors.py  test_formatter.py  test_scheduler.py  test_storage.py  test_twitter.py
tests/fixtures/: x_api_responses.py
